<resources>
    <string name="app_name">Gadgeothek</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-Mail</string>
    <string name="prompt_password">Passwort</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_matrikelnr">Matrikelnummer</string>
    <string name="action_sign_in">Anmelden</string>
    <string name="action_register">Registrieren</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_login">Anmelden</string>
    <string name="title_activity_register">Registrieren</string>
    <string name="dismiss_snackbar">DISMISS</string>
    <string name="tab_loans">AUSGELIEHEN</string>
    <string name="tab_reservations">RESERVIERT</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="settings_server_address">server_address</string>
    <string name="settings_default_server">http://10.0.2.2/public</string>
    <string name="title_activity_settings">Settings</string>
    <string name="cancel_reservation">Cancel Reservation</string>
    <string name="action_cancel_reservation">Cancel Reservation</string>

    <string name="msg_reservation_cancelled">Reservation cancelled</string>
    <string name="msg_cancelling_failed">"Cancelling failed: "</string>
    <string name="msg_update_failed">"Update failed: "</string>
    <string name="title_activity_new_reservation">New Reservation</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">Gadgeothek</string>

</resources>

